--- a/src/components/forms/FormSearchCity/FormSearchCity.scss
+++ b/src/components/forms/FormSearchCity/FormSearchCity.scss
@@ -1,4 +1,9 @@
-.form {
+$height-input: 3.375rem;
+$height-button: $height-input;
+$font-size-input: 1.35rem;
+$font-size-label: $font-size-input - 0.15rem;
+
+.form-search-city {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -7,9 +12,14 @@
   &__button {
     appearance: none;
     background-color: black;
+    border: none;
+    border-radius: 0.5rem;
     color: white;
     display: block;
+    font-size: $font-size-input;
     font-weight: 700;
+    height: $height-input;
+    padding: 0 1rem;
 
     &:hover {
       background-color: var(--brand-secondary);
@@ -19,16 +29,25 @@
     }
   }
 
+  &__formfield {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
   &__input {
     border: none;
     border-radius: 0.5rem;
-    font-size: 1.2rem;
+    font-size: $font-size-input;
     outline: none;
-    padding: 1rem 0.8rem;
+    padding: 0 1rem;
+
+    height: $height-input;
     width: 100%;
   }
 
   &__label {
     display: block;
+    font-size: $font-size-label;
   }
 }
