--- a/src/components/cards/CardFooterForecastToday/CardFooterForecastToday.scss
+++ b/src/components/cards/CardFooterForecastToday/CardFooterForecastToday.scss
@@ -8,4 +8,13 @@
   justify-content: space-around;
   gap: 0.2rem;
   padding: 0.5rem 0;
+
+  &__nature-info {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    
+    width: 4.875rem;
+  }
 }
