--- a/src/components/forms/FormSearchCity/FormSearchCity.scss
+++ b/src/components/forms/FormSearchCity/FormSearchCity.scss
@@ -11,7 +11,7 @@ $font-size-label: $font-size-input - 0.15rem;
 
   &__button {
     appearance: none;
-    background-color: black;
+    background-color: #000;
     border: none;
     border-radius: 0.5rem;
     color: white;
