--- a/src/components/cards/CardFooterForecastToday/CardFooterForecastToday.scss
+++ b/src/components/cards/CardFooterForecastToday/CardFooterForecastToday.scss
@@ -10,7 +10,8 @@
   flex-wrap: wrap;
   justify-content: space-around;
   gap: 0.2rem;
-  height: 5rem;
+  padding: 0.5rem;
+  height: 3rem;
 
   &__nature-event {
     margin: 0;
@@ -22,7 +23,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+    gap: 0.5rem;
 
     width: 32%;
   }
