--- a/src/components/cards/CardForecastToday/CardForecastToday.scss
+++ b/src/components/cards/CardForecastToday/CardForecastToday.scss
@@ -1,11 +1,14 @@
 .card-forecast-today {
-  width: 100%;
+  background-color: #fff;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
   padding: 10px;
+
+  width: 100%;
 }
 
 @media (width > 320px) {
   .card-forecast-today {
     width: 430px;
-    padding: 0;
   }
 }
