--- a/src/components/cards/CardHeaderForecastToday/CardHeaderForecastToday.scss
+++ b/src/components/cards/CardHeaderForecastToday/CardHeaderForecastToday.scss
@@ -4,8 +4,30 @@
   color: #fff;
   padding: 0.5rem;
 
+  height: 3rem;
+
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   gap: 0.2rem;
+
+  &__lastupdated {
+    font-size: 0.8rem;
+    margin: 0;
+  }
+
+  &__location {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    font-size: 1.2rem;
+    justify-content: flex-start;
+    gap: 0.5rem;
+  }
+
+  &__location-details {
+    font-weight: 700;
+    margin: 0;
+  }
 }
