--- a/src/pages/ForecastPage/ForecastPage.scss
+++ b/src/pages/ForecastPage/ForecastPage.scss
@@ -6,5 +6,15 @@
   gap: 1rem;
 
   min-height: 100vh;
-  width: 305px;
+  padding: 0 1rem;
+}
+
+@media (width > 400px) {
+  .forecast-page {
+    display: flex;
+    justify-content: center;
+    width: 350px;
+
+    margin: 0 auto;
+  }
 }
