--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -6,11 +6,14 @@
   gap: 1rem;
 
   min-height: 100vh;
-  width: 305px;
 }
 
-@media (width > 320px) {
-  .home {
-    width: 450px;
+@media (width > 400px) {
+  .home-page {
+    display: flex;
+    justify-content: center;
+    width: 350px;
+
+    margin: 0 auto;
   }
 }
