--- a/src/components/GroupForecastByHour/GroupForecastByHour.scss
+++ b/src/components/GroupForecastByHour/GroupForecastByHour.scss
@@ -8,4 +8,19 @@
   overflow: auto;
 
   width: 100%;
+
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+    background-color: #f5f5f5;
+  }
+
+  &::-webkit-scrollbar {
+    height: 0.5rem;
+    width: 0.5rem;
+    background-color: #f5f5f5;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #000000;
+  }
 }
