--- a/src/components/boxes/BoxForecastByDay/BoxForecastByDay.scss
+++ b/src/components/boxes/BoxForecastByDay/BoxForecastByDay.scss
@@ -1,9 +1,7 @@
 .box-forecast-day {
   background-color: #fff;
   border-radius: 0.5rem;
-  padding: 0.8rem 0;
-
-  width: 100%;
+  padding: 0.8rem 0.5rem;
 
   align-items: center;
   display: flex;
