--- a/src/pages/ForecastPage/ForecastPage.scss
+++ b/src/pages/ForecastPage/ForecastPage.scss
@@ -7,6 +7,17 @@
 
   min-height: 100vh;
   padding: 0.5rem 1rem;
+
+  &__link {
+    font-size: 1.2rem;
+    font-weight: 800;
+    color: #000;
+
+    &:active,
+    &:visited {
+      color: #000;
+    }
+  }
 }
 
 @media (width > 450px) {
