--- a/src/components/boxes/BoxForecastByDay/BoxForecastByDay.scss
+++ b/src/components/boxes/BoxForecastByDay/BoxForecastByDay.scss
@@ -8,4 +8,18 @@
   flex-wrap: wrap;
   justify-content: space-around;
   gap: 0.5rem;
+
+  &__temperature {
+    font-size: 1.2rem;
+    font-weight: 700;
+  }
+}
+
+@media (width > 450px) {
+  .box-forecast-day {
+    &__temperature {
+      min-width: 7.625rem;
+      text-align: right;
+    }
+  }
 }
